--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -55,10 +55,10 @@ app.reportServerPassword = jasperadmin
 app.reportServerLocation = /jasperserver
 
 resources.db.adapter = "mysqli"
-resources.db.params.host = "localhost"
-resources.db.params.username = "root"
-resources.db.params.password = "123456"
-resources.db.params.dbname = "cemacc"
+resources.db.params.host = "us-cdbr-iron-east-02.cleardb.net"
+resources.db.params.username = "bb985921401b39"
+resources.db.params.password = "0d1e59f5"
+resources.db.params.dbname = "heroku_9c970652977a111"
 resources.db.isDefaultAdapter = true
 
 [development : production]
