--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -66,9 +66,9 @@ phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 
-app.siteUrl = http://dev.cemacc.com
-app.staticUrl = http://dev.cemacc.com/static
-app.dinamicUrl = http://dev.cemacc.com/dinamic
+app.siteUrl = http://cemacc.herokuapp.com
+app.staticUrl = http://cemacc.herokuapp.com/static
+app.dinamicUrl = http://cemacc.herokuapp.com/dinamic
 
 [direct : production]
 phpSettings.display_startup_errors = 1
