subida demo1 design

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -85,13 +85,13 @@ app.dinamicUrl = http://bd.legal.com/dinamic
 
 [local : direct]
 
-app.siteUrl = http://dev.cemacc.com
-app.staticUrl = http://dev.cemacc.com/static
-app.dinamicUrl = http://dev.cemacc.com/dinamic
+app.siteUrl = http://local.cemacc.com
+app.staticUrl = http://local.cemacc.com/static
+app.dinamicUrl = http://local.cemacc.com/dinamic
 
 resources.db.adapter = "mysqli"
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
-resources.db.params.password = "123456"
+resources.db.params.password = ""
 resources.db.params.dbname = "cemacc"
 resources.db.isDefaultAdapter = true
